# poc-fastapi-opentelemetry

./: .env_example  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml
alertmanager/: alertmanager.yml
app/: main.py
grafana/provisioning/datasources/: datasources.yml
otel/: otel-collector-config.yml
prometheus/: alerts.yml  prometheus.yml
promtail/: promtail.yml
src/: config.py  logging_config.py  main.py  otel.py
src/fastapi/: __init__.py  logging_config.py  main.py  middleware.py  otel.py
tempo/: tempo.yml
